--- a/BugFollowing/app/web/static/css/app/main.css
+++ b/BugFollowing/app/web/static/css/app/main.css
@@ -1,4 +1,13 @@
 @charset "UTF-8";
+
+.col-70 {
+  width: 70px;
+}
+.portrait-group {
+  width: 50px;
+  height: 50px
+}
+
 /* 工具类 */
 input, button {
   outline: none !important; }
