--- a/Mall03/project/app/web/static/css/mobile/home.css
+++ b/Mall03/project/app/web/static/css/mobile/home.css
@@ -86,3 +86,10 @@ body {
 
 .goods-wrap-info .price {
   color: #e21d1d; }
+
+.shop-banner-wrap img {
+  width: 16rem;
+  height: 5rem; }
+
+.shop-banner-wrap {
+  margin-top: .2rem; }
