--- a/Mall03/project/node/sass/mobile/home.scss
+++ b/Mall03/project/node/sass/mobile/home.scss
@@ -111,3 +111,13 @@ body {
 .goods-wrap-info .price {
   color: #e21d1d;
 }
+
+// 店铺广告
+.shop-banner-wrap img {
+  width: 16rem;
+  height: 5rem;
+}
+
+.shop-banner-wrap {
+  margin-top: .2rem;
+}
