--- a/Mall03/project/app/web/static/css/mobile/home.css
+++ b/Mall03/project/app/web/static/css/mobile/home.css
@@ -93,3 +93,7 @@ body {
 
 .shop-banner-wrap {
   margin-top: .2rem; }
+
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: #fabc09; }
