--- a/Mall03/project/node/sass/mobile/home.scss
+++ b/Mall03/project/node/sass/mobile/home.scss
@@ -121,3 +121,8 @@ body {
 .shop-banner-wrap {
   margin-top: .2rem;
 }
+
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: #fabc09;
+}
