前端渲染框架

--- a/AlphaMM/project/app/web/static/css/core/v1/lib.css
+++ b/AlphaMM/project/app/web/static/css/core/v1/lib.css
@@ -604,6 +604,9 @@ html {
 .hidden {
   visibility: hidden; }
 
+[v-cloak] {
+  display: none; }
+
 .btn-circular-fixed {
   position: fixed;
   z-index: 1000;
