--- a/AlphaMM/project/app/web/static/css/core/v1/aw-renew.css
+++ b/AlphaMM/project/app/web/static/css/core/v1/aw-renew.css
@@ -1,3 +1,6 @@
+.ms-controller, .ms-important, [ms-controller], [ms-important] {
+  visibility: hidden; }
+
 th, td, body {
   font-family: "Microsoft YaHei", "simsun", Helvetica, Arial !important; }
 
@@ -7,3 +10,7 @@ th, td {
 
 .table-col-img {
   width: 80px; }
+
+.table-edit tr:hover {
+  background: #eee;
+  cursor: pointer; }
