--- a/AlphaMM/project/app/web/static/css/app-core/aw-renew.v1.css
+++ b/AlphaMM/project/app/web/static/css/app-core/aw-renew.v1.css
@@ -14,3 +14,10 @@ th, td {
 .table-edit tr:hover {
   background: #eee;
   cursor: pointer; }
+
+.visibility-hidden {
+  visibility: hidden; }
+
+.upLoadWarp {
+  width: 100%;
+  height: 100%; }
