--- a/AlphaMM/project/node/scss/app-core/aw-renew.v1.scss
+++ b/AlphaMM/project/node/scss/app-core/aw-renew.v1.scss
@@ -23,3 +23,11 @@ th, td {
   background: #eee;
   cursor: pointer;
 }
+
+.visibility-hidden {
+  visibility: hidden;
+}
+.upLoadWarp {
+  width: 100%;
+  height: 100%;
+}
