--- a/AlphaMM/project/node/page/customer-mobile/home/home_index.v1.jade
+++ b/AlphaMM/project/node/page/customer-mobile/home/home_index.v1.jade
@@ -20,15 +20,15 @@ html(lang='zh-CN')
       //- 网页title
       title 苏宁首页
       //- CSS
-      link(rel='stylesheet' href='static/css/core/v1/lib.css')
-      link(rel='stylesheet' href='static/css/lib/font-awesome.min.css')
-      link(rel='stylesheet' href='static/css/lib/swiper-3.3.1.min.css')
-      link(rel='stylesheet' href='static/css/lib/normalize.css')
-      link(rel='stylesheet' href='static/css/customer-mobile/home/v1/home.css')
+      link(rel='stylesheet' href='/static/css/app-core/lib.v1.css')
+      link(rel='stylesheet' href='/static/css/lib/font-awesome.min.css')
+      link(rel='stylesheet' href='/static/css/lib/swiper-3.3.1.min.css')
+      link(rel='stylesheet' href='/static/css/lib/normalize.css')
+      link(rel='stylesheet' href='/static/css/customer-mobile/home.v1.css')
       //- 前置js
-      script(src='js/lib/rem/rem.js')
-      script(src='js/require.js')
-      script(src='js/config.js')
+      script(src='/js/lib/rem/rem.js')
+      script(src='/js/require.js')
+      script(src='/js/config.js')
       script
          | require(['cmHome']);
    body
