--- a/AlphaMM/project/app/web/static/css/app-core/aw-renew.v1.css
+++ b/AlphaMM/project/app/web/static/css/app-core/aw-renew.v1.css
@@ -31,7 +31,8 @@ th, td {
   width: 100%;
   height: 55px;
   line-height: 55px;
-  text-align: center; }
+  text-align: center;
+  cursor: pointer; }
 
 .upLoadImg .fa {
   line-height: inherit; }
