--- a/PictureTalk/app/view/home.html
+++ b/PictureTalk/app/view/home.html
@@ -17,11 +17,13 @@
     <link rel="styleSheet" href="//cdn.bootcss.com/font-awesome/4.6.2/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/menu.css">
     <!--前置js-->
     <script src="/js/remSetting.js"></script>
   </head>
   <body>
     <!--content-->
+    <div id="R-menu"></div>
     <div class="body-container">
       <header id="R-seader"></header>
       <section class="section-container">
