--- a/Elagance/source/page/signin.jade
+++ b/Elagance/source/page/signin.jade
@@ -19,9 +19,8 @@ html(lang='zh-CN')
       //- 网页title
       title 登录
       //- 自行确定normalize or reset
-      link(rel='styleSheet' href='/assets/css/elagance.css')
       link(rel='styleSheet' href='//cdn.bootcss.com/font-awesome/4.6.2/css/font-awesome.min.css')
-      link(rel='stylesheet' href='/assets/css/reset.v1.css')
+      link(rel='stylesheet' href='/assets/css/elagance.css')
       link(rel='stylesheet' href='/assets/css/elagance.signin.v1.css')
       //前置js
       //- prefix-free用于自动添加css前缀
