--- a/Elagance/source/scss/_elagance.signin.v1.scss
+++ b/Elagance/source/scss/_elagance.signin.v1.scss
@@ -1,13 +1,9 @@
 @charset "UTF-8";
 
-
-
-
-
-
 .signin-body {
   width: 16rem;
   height: 28.4rem;
   background: url("/assets/img/bg-signin.png") no-repeat;
   background-size: 16rem 28.4rem;
+  margin-left: 16rem;
 }
