--- a/Elagance/app/assets/css/elagance.lead.v1.css
+++ b/Elagance/app/assets/css/elagance.lead.v1.css
@@ -1,3 +1,7 @@
+.app-view {
+  width: 16rem;
+  overflow: hidden; }
+
 .lead-body {
   width: 16rem;
   height: 28.4rem;
@@ -64,3 +68,10 @@
   border: none;
   background: #efdecc;
   color: #937f6b; }
+
+.signin-body {
+  width: 16rem;
+  height: 28.4rem;
+  background: url("/assets/img/bg-signin.png") no-repeat;
+  background-size: 16rem 28.4rem;
+  margin-left: 16rem; }
