--- a/Elagance/source/scss/elagance.scss
+++ b/Elagance/source/scss/elagance.scss
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
-@import "_normalize.scss";
-@import "_animate.scss";
+@import "lib/normalize";
+@import "lib/animate";
 
-@import "_minins.scss";
-@import "reset.v1.scss";
-@import "_utils.scss";
-@import "_grid.scss";
+@import "mixin/clearfix";
+
+@import "modules/reset";
+@import "modules/grid";
+@import "modules/utils";
