--- a/Elagance/app/assets/css/elagance.lead.v1.css
+++ b/Elagance/app/assets/css/elagance.lead.v1.css
@@ -1,6 +1,8 @@
-.app-view {
-  width: 16rem;
-  overflow: hidden; }
+.view-lead {
+  top: 0;
+  left: 0;
+  z-index: 2;
+  backface-visibility: hidden; }
 
 .lead-body {
   width: 16rem;
@@ -11,7 +13,8 @@
 .lead-body-logo {
   width: 2rem;
   height: 2.45rem;
-  background: url("/assets/img/logo_normal.png") no-repeat;
+  background-image: url("/assets/img/logo_normal.png");
+  background-repeat: no-repeat;
   background-size: 100%;
   position: absolute;
   top: 0;
@@ -64,14 +67,85 @@
   border-radius: 3rem;
   color: #ffffff; }
 
-.lead-body-sign-btn:active {
+.sign-active-1:active {
   border: none;
   background: #efdecc;
   color: #937f6b; }
+
+.cut-container {
+  perspective: 1000;
+  -webkit-perspective: 1000; }
+
+.view .cut-container.cutto {
+  transition: transform 800ms linear;
+  transform-style: preserve-3d;
+  transform: rotateY(180deg); }
+
+.view-signin {
+  top: 0;
+  left: 0;
+  z-index: 1;
+  backface-visibility: hidden;
+  transform: rotateY(180deg); }
+
+.animate-text {
+  transition: transform 800ms linear;
+  transform: rotateY(180deg); }
 
 .signin-body {
   width: 16rem;
   height: 28.4rem;
   background: url("/assets/img/bg-signin.png") no-repeat;
-  background-size: 16rem 28.4rem;
-  margin-left: 16rem; }
+  background-size: 16rem 28.4rem; }
+
+.lead-signin-logo {
+  background-image: url("/assets/img/logo_light.png"); }
+
+.lead-signin-title {
+  width: 8rem;
+  height: 2rem;
+  line-height: 2rem;
+  position: absolute;
+  text-align: center;
+  color: #464646;
+  top: 6.3rem;
+  left: 8.5rem;
+  transition: all 200ms linear; }
+
+.lead-signin-title.now {
+  font-size: 1rem;
+  color: #efdecc;
+  top: 6rem;
+  left: 4rem;
+  transition: all 200ms linear; }
+
+.sign-form {
+  width: 10rem;
+  height: 4rem;
+  position: absolute;
+  left: 3rem;
+  top: 11rem; }
+
+.input-control {
+  background: transparent;
+  border: none;
+  width: 9rem;
+  margin: 0 .5rem;
+  height: 2rem;
+  font-size: .7rem;
+  font-weight: bold;
+  line-height: 2rem;
+  text-align: center;
+  color: #ffffff;
+  border-bottom: 0.05rem solid rgba(255, 255, 255, 0.15); }
+
+.forgot {
+  color: #b4b4b4;
+  height: 2rem;
+  line-height: 2rem;
+  text-align: center; }
+
+.sign-active-2:active {
+  border: none;
+  background: #2553b3;
+  color: #ffffff; }
