--- a/Elagance/source/scss/_elagance.signin.v1.scss
+++ b/Elagance/source/scss/_elagance.signin.v1.scss
@@ -68,6 +68,14 @@
   text-align: center;
 }
 
+.help {
+  margin-top: 1.5rem;
+  color: #ffffff;
+  height: 2rem;
+  line-height: 2rem;
+  text-align: center;
+}
+
 .sign-active-2:active {
   border: none;
   background: #2553b3;
