--- a/Elagance/app/assets/css/elagance.lead.v1.css
+++ b/Elagance/app/assets/css/elagance.lead.v1.css
@@ -145,6 +145,13 @@
   line-height: 2rem;
   text-align: center; }
 
+.help {
+  margin-top: 1.5rem;
+  color: #ffffff;
+  height: 2rem;
+  line-height: 2rem;
+  text-align: center; }
+
 .sign-active-2:active {
   border: none;
   background: #2553b3;
