--- a/Elagance/app/assets/css/elagance.css
+++ b/Elagance/app/assets/css/elagance.css
@@ -1518,8 +1518,14 @@ html {
 .mr-05r {
   margin-right: .5rem; }
 
-.hide {
+.none {
   display: none; }
 
-.show {
+.block {
   display: block; }
+
+.invisible {
+  visibility: hidden; }
+
+.visible {
+  visibility: visible; }
