--- a/cai/www-source/source/jade/index.jade
+++ b/cai/www-source/source/jade/index.jade
@@ -30,7 +30,7 @@ html(lang='zh-CN')
                   .col.bar-ico
                      i.fa.fa-bars
                   .col.bar-thitle
-                     h3.text-left#view 菜谱
+                     h3.text-left#view {{test}}
                   .col.bar-ico
                      i.fa.fa-search
                   .col.bar-ico
