构建项目模板

--- a/VueWebpack/source/view/index.html
+++ b/VueWebpack/source/view/index.html
@@ -5,7 +5,6 @@
     <title>vueDemo</title>
   </head>
   <body>
-    <app></app>
-    <script src="app/build.js"></script>
+    <h1>项目目录测试</h1>
   </body>
 </html>
