--- a/VueWebpack/app/assets/css/index.css
+++ b/VueWebpack/app/assets/css/index.css
@@ -1,3 +1,2 @@
-body {
-  background: #0059a6;
-  color: #000080; }
+body{background:#036;color:navy;font-size:20px}
+/*# sourceMappingURL=index.css.map*/
