--- a/VueWebpack/source/view/index.html
+++ b/VueWebpack/source/view/index.html
@@ -5,7 +5,8 @@
     <title>vueDemo</title>
   </head>
   <body>
-    <h1>项目目录测试!!!!!!!!!!</h1>
-  <div id="test">{{msg}}</div>
+    <h1>项目目录测试</h1>
+    <div id="test">{{msg}}</div>
+    <script type="text/javascript" src="js/common.js"></script>
   </body>
 </html>
