--- a/VueWebpack/app/assets/css/index.css
+++ b/VueWebpack/app/assets/css/index.css
@@ -1,2 +1,5 @@
-body{background:#036;color:navy;font-size:30px}
-/*# sourceMappingURL=index.css.map*/
+body {
+    background: #003366;
+    color: #000080;
+    font-size: 20px;
+}
