基本配置完毕,修改一下就可以了

--- a/VueWebpack/app/assets/css/index.css
+++ b/VueWebpack/app/assets/css/index.css
@@ -1,5 +1,2 @@
-body {
-    background: #003366;
-    color: #000080;
-    font-size: 20px;
-}
+body{background:#036;color:navy;font-size:20px}
+/*# sourceMappingURL=index.css.map*/
