--- a/VueWebpack/app/assets/css/index.css
+++ b/VueWebpack/app/assets/css/index.css
@@ -1,2 +1,5 @@
-body{background:#036;color:navy;font-size:20px}
-/*# sourceMappingURL=index.css.map*/
+body {
+    background: #0074D9;
+    color: #004444;
+    font-size: 15px;
+}
