--- a/VueWebpack/source/view/bank.html
+++ b/VueWebpack/source/view/bank.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
+    <h1>bank</h1>
     <app></app>
     <script type="text/javascript" src="/js/common.js"></script>
 </body>
