--- a/VueWebpack/source/view/index.html
+++ b/VueWebpack/source/view/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <h1>项目目录测试</h1>
-    <h2>我靠,终于成功了</h2>
     <div id="test">{{msg}}</div>
-    <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="/js/common.js"></script>
   </body>
 </html>
