--- a/VueWebpack/app/assets/css/index.css
+++ b/VueWebpack/app/assets/css/index.css
@@ -1,5 +1,2 @@
-body {
-    background: #0074D9;
-    color: #004444;
-    font-size: 15px;
-}
+body{background:#0074d9;color:#044;font-size:15px}
+/*# sourceMappingURL=index.css.map*/
