--- a/VueWebpack/source/mall/template/tpl.template.html
+++ b/VueWebpack/source/mall/template/tpl.template.html
@@ -13,16 +13,16 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="wap-font-scale" content="no">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
-    <title>首页</title>
+    <title>测试页</title>
     <link href="/lib/normalize/normalize.min.css" rel="stylesheet">
     <link href="/assets/css/build.common.css" rel="stylesheet">
-  <link href="/assets/css/build.index.css?ad40c1c1f726c776b31f" rel="stylesheet"></head>
+  </head>
   <body>
     <div id="header">
       <barheader></barheader>
     </div>
-    <h1 class="text-center">项目构建测试-首页</h1>
+    <h1 class="text-center">项目构建测试-测试页</h1>
     <div id="test" class="text-center">{{msg}}</div>
     <script type="text/javascript" src="/js/build.common.js"></script>
-  <script type="text/javascript" src="/js/build.index.js?ad40c1c1f726c776b31f"></script></body>
+  </body>
 </html>
